--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://c5074add-db37-4a52-ba8e-eeaa3e775d0e.preview.emergentagent.com
 WDS_SOCKET_PORT=443
